# silkprint

./: .editorconfig  .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  LICENSE  README.md  SPEC.md  deny.toml  justfile  rust-toolchain.toml
.github/workflows/: ci.yml  cicd.yml  release.yml
docs/: demo.md  showcase.md
docs/plans/: terminal-reader.md
examples/: picker_probe.rs
silkprint-wasm/: Cargo.toml
silkprint-wasm/src/: lib.rs
src/: cli.rs  error.rs  lib.rs  main.rs  warnings.rs
src/fonts/: mod.rs
src/render/: csv.rs  emoji.rs  escape.rs  frontmatter.rs  html.rs  image.rs  linkcheck.rs  markdown.rs  mermaid.rs  mod.rs  origin.rs  preamble.rs  remote.rs  typst.rs
src/render/terminal/: ansi.rs  caps.rs  config.rs  glyphs.rs  highlight.rs  html.rs  layout.rs  mathunicode.rs  mod.rs  model.rs  style.rs  table.rs  walk.rs
src/render/terminal/tui/: chrome.rs  diagrams.rs  headings.rs  images.rs  math.rs  mod.rs
src/theme/: builtin.rs  contrast.rs  mod.rs  syntax.rs  tmtheme.rs  tokens.rs
tests/: integration.rs  pdf_validation.rs  snapshots.rs  terminal_snapshots.rs
tests/fixtures/: alerts.md  basic.md  code-blocks.md  description-lists.md  edge-cases.md  emojis.md  footnotes.md  frontmatter.md  full-features.md  html-blocks.md  images.md  lists.md  math.md  minimal.md  promo-plan.md  tables.md  tui-ultimate.md  wikilinks.md
tests/fixtures/themes/: custom-test.toml  invalid-test.toml
tests/snapshots/: snapshots__basic.snap  snapshots__html-blocks.snap  snapshots__minimal.snap  terminal_snapshots__terminal_alerts.snap  terminal_snapshots__terminal_basic.snap  terminal_snapshots__terminal_code_blocks.snap  terminal_snapshots__terminal_full_features.snap
themes/: _base-syntax-dark.toml  _base-syntax-light.toml
themes/artistic/: blueprint.toml  candy.toml  noir.toml  witch.toml
themes/classic/: academic.toml  newspaper.toml  parchment.toml  typewriter.toml
themes/developer/: catppuccin-latte.toml  catppuccin-mocha.toml  dracula.toml  gruvbox-dark.toml  gruvbox-light.toml  nord.toml  rose-pine.toml  solarized-dark.toml  solarized-light.toml  tokyo-night.toml
themes/futuristic/: cyberpunk.toml  hologram.toml  matrix.toml  synthwave.toml  terminal.toml
themes/greyscale/: greyscale-cool.toml  greyscale-warm.toml  high-contrast.toml
themes/nature/: arctic.toml  forest.toml  ocean.toml  sakura.toml  sunset.toml
themes/signature/: manuscript.toml  monochrome.toml  silk-dark.toml  silk-light.toml
themes/silkcircuit/: silkcircuit-dawn.toml  silkcircuit-glow.toml  silkcircuit-neon.toml  silkcircuit-soft.toml  silkcircuit-vibrant.toml
web/: .gitignore  biome.json  next.config.ts  package-lock.json  package.json  pnpm-lock.yaml
web/src/app/: globals.css  layout.tsx  page.tsx
web/src/components/: editor.tsx  features.tsx  footer.tsx  header.tsx  hero.tsx  pdf-preview.tsx  terminal-frame.tsx  terminal-reader.tsx  theme-gallery.tsx  theme-selector.tsx
web/src/lib/: silkprint.ts
